add sound effect

--- a/www/index.html
+++ b/www/index.html
@@ -21,8 +21,7 @@
 
 <body>
     <canvas id="glcanvas" tabindex='1'></canvas>
-    <!-- Minified and statically hosted version of https://github.com/not-fl3/miniquad/blob/master/native/sapp-wasm/js/gl.js -->
-    <script src="https://not-fl3.github.io/miniquad-samples/gl.js"></script>
+    <script src="mq_js_bundle.js"></script>
     <script>load("oort.wasm");</script>
 </body>
 
