add editor alongside GL canvas

--- a/www/index.html
+++ b/www/index.html
@@ -1,28 +1,66 @@
+<!doctype html>
 <html lang="en">
-
 <head>
-    <meta charset="utf-8">
-    <title>Oort</title>
-    <style>
-        html,
-        body,
-        canvas {
-            margin: 0px;
-            padding: 0px;
-            width: 100%;
-            height: 100%;
-            overflow: hidden;
-            position: absolute;
-            background: black;
-            z-index: 0;
-        }
-    </style>
+  <meta charset="utf-8">
+  <title>Oort</title>
+  <style>
+html, body {
+  margin: 0px;
+  padding: 0px;
+}
+#editor {
+  width: 30%;
+
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  background: black;
+  z-index: 0;
+}
+#glcanvas {
+  left: 30%;
+  width: 70%;
+
+  margin: 0px;
+  padding: 0px;
+  height: 100%;
+  overflow: hidden;
+  position: absolute;
+  background: black;
+  z-index: 0;
+}
+  </style>
+  <link rel="stylesheet" data-name="vs/editor/editor.main" href="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.25.2/min/vs/editor/editor.main.min.css" integrity="sha512-Aplc5M1v/ytxu11jVmWdmKQLn3SLeNHcv8ii1tWmMl61RFoGC5AXM1qSVDIpQorqQmY9FmO1U2Mw1PopeSCGrA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
-    <canvas id="glcanvas" tabindex='1'></canvas>
-    <script src="mq_js_bundle.js"></script>
-    <script>load("oort.wasm");</script>
+  <canvas id="glcanvas" tabindex="1"></canvas>
+  <div id="editor"></div>
+  <script>
+      var require = {paths: {'vs':'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.25.2/min/vs/'}}
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.25.2/min/vs/loader.min.js" integrity="sha512-SExj71Cw3B9C9EE8BC/ad3AKia5zQXDj/2SM4THgkeKh5GIFZhKM/R3uclUG8YZwJrjcVhydAlIHmfNvsBCKZA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.25.2/min/vs/editor/editor.main.nls.min.js" integrity="sha512-/Lpr8XyEnghf+eu5/ytlh92qc6gEWUodmPjmxRFKqBG1ZzS0Qif87TFRnRy7BMf6epqv2NdE13JYvnvrSPVAvQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.25.2/min/vs/editor/editor.main.js" integrity="sha512-cc8MosBh6Iu+AcufFZYRhPVXE88eysd9SiNFB8YJm40+KaoRZMP64nRXiBf5P/uLzwwTCLYo/PYAh4vBRI8wUg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script>
+    require.config({paths: {'vs':'https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.25.2/min/vs/'}})
+    require(['vs/editor/editor.main'], function () {
+      var editor = monaco.editor.create(document.getElementById('editor'), {
+        value: `-- defines a factorial function
+function fact (n)
+  if n == 0 then
+    return 1
+  else
+    return n * fact(n-1)
+  end
+end`,
+        language: 'lua',
+        theme: 'vs-dark'
+      });
+    });
+  </script>
+  <script src="mq_js_bundle.js"></script>
+  <script>load("oort.wasm");</script>
 </body>
-
 </html>
