--- a/www/index.html
+++ b/www/index.html
@@ -3,35 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Oort</title>
-  <style>
-html, body {
-  margin: 0px;
-  padding: 0px;
-}
-#editor {
-  width: 30%;
-
-  margin: 0px;
-  padding: 0px;
-  height: 100%;
-  overflow: hidden;
-  position: absolute;
-  background: black;
-  z-index: 0;
-}
-#glcanvas {
-  left: 30%;
-  width: 70%;
-
-  margin: 0px;
-  padding: 0px;
-  height: 100%;
-  overflow: hidden;
-  position: absolute;
-  background: black;
-  z-index: 0;
-}
-  </style>
+  <link rel="stylesheet" href="main.css" />
   <link rel="stylesheet" data-name="vs/editor/editor.main" href="https://cdnjs.cloudflare.com/ajax/libs/monaco-editor/0.25.2/min/vs/editor/editor.main.min.css" integrity="sha512-Aplc5M1v/ytxu11jVmWdmKQLn3SLeNHcv8ii1tWmMl61RFoGC5AXM1qSVDIpQorqQmY9FmO1U2Mw1PopeSCGrA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
