www: use a select box to pick the scenario

--- a/www/index.html
+++ b/www/index.html
@@ -12,5 +12,6 @@
   <canvas id="glcanvas" tabindex="1"></canvas>
   <div id="editor"></div>
   <div id="status"></div>
+  <select name="scenario" id="scenario"></select>
 </body>
 </html>
