www: add a toolbar

--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,9 @@
   <canvas id="glcanvas" tabindex="1"></canvas>
   <div id="editor"></div>
   <div id="status"></div>
-  <select name="scenario" id="scenario"></select>
+  <div id="toolbar">
+    <div class="toolbar-elem title">Oort</div>
+    <div class="toolbar-elem right"/><select name="scenario" id="scenario"></select></div>
+  </div>
 </body>
 </html>
