--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,14 @@
 <head>
   <meta charset="utf-8">
   <title>Oort</title>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-30337026-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-30337026-1');
+  </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
