ui: display splash screen between missions

--- a/www/index.html
+++ b/www/index.html
@@ -65,5 +65,6 @@
       <li><a href="https://rhai.rs/book/language/index.html">Rhai Language Reference</a></li>
     </ul>
   </div>
+  <div id="splash"></div>
 </body>
 </html>
