--- a/www/index.html
+++ b/www/index.html
@@ -25,48 +25,50 @@
     <div class="toolbar-elem right"><select name="scenario" id="scenario"></select></div>
     <div class="toolbar-elem right"><a id="doc_link" href="#">Documentation</a></div>
   </div>
-  <div id="doc">
-    <h1>Quick Reference</h1>
-    Press Escape to close.<br />
+  <div id="overlay">
+    <div id="splash-overlay" class="inner-overlay"></div>
+    <div id="doc-overlay" class="inner-overlay">
+      <h1>Quick Reference</h1>
+      Press Escape to close.<br />
 
-    <h2>Basics</h2>
-    Select a scenario from the list in the top-right of the page.</br>
-    Press Ctrl-Enter in the editor to run the scenario with a new version of your code.<br/>
-    The game calls your <code>tick()</code> function 60 times per second.
+      <h2>Basics</h2>
+      Select a scenario from the list in the top-right of the page.</br>
+      Press Ctrl-Enter in the editor to run the scenario with a new version of your code.<br/>
+      The game calls your <code>tick()</code> function 60 times per second.
 
-    <h2>Ship Control</h2>
-    <ul>
-      <li><code>api.position() &rarr; vec2</code>: Get the current position in meters.</li>
-      <li><code>api.velocity() &rarr; vec2</code>: Get the current velocity in m/s.</li>
-      <li><code>api.heading() &rarr; float</code>: Get the current heading in radians.</li>
-      <li><code>api.angular_velocity() &rarr; float</code>: Get the current angular velocity in radians/s.</li>
-      <li><code>api.accelerate(acceleration: vec2)</code>: Linear acceleration. X axis is forward/back, Y axis is left/right.</li>
-      <li><code>api.torque(acceleration: float)</code>: Angular acceleration. Unit is radians/s<sup>2</sup>.</li>
-      <li><code>api.fire_weapon()</code>: Fire the ship's main weapon.</li>
-      <li><code>api.explode()</code>: Self-destruct.</li>
-    </ul>
+      <h2>Ship Control</h2>
+      <ul>
+        <li><code>api.position() &rarr; vec2</code>: Get the current position in meters.</li>
+        <li><code>api.velocity() &rarr; vec2</code>: Get the current velocity in m/s.</li>
+        <li><code>api.heading() &rarr; float</code>: Get the current heading in radians.</li>
+        <li><code>api.angular_velocity() &rarr; float</code>: Get the current angular velocity in radians/s.</li>
+        <li><code>api.accelerate(acceleration: vec2)</code>: Linear acceleration. X axis is forward/back, Y axis is left/right.</li>
+        <li><code>api.torque(acceleration: float)</code>: Angular acceleration. Unit is radians/s<sup>2</sup>.</li>
+        <li><code>api.fire_weapon()</code>: Fire the ship's main weapon.</li>
+        <li><code>api.explode()</code>: Self-destruct.</li>
+      </ul>
 
-    <h2>Vector Math</h2>
-    <ul>
-      <li><code>vec2(x, y) &rarr; vec2</code>: Create a vector.</li>
-      <li><code>v.x, v.y &rarr; float</code>: Get a component of a vector.</li>
-      <li><code>v1 +- v2 &rarr; vec2</code>: Basic arithmetic between vectors.</li>
-      <li><code>v */ float &rarr; vec2</code>: Basic arithmetic between vectors and scalars.</li>
-      <li><code>-v &rarr; vec2</code>: Negate a vector.</li>
-      <li><code>v.magnitude() &rarr; float</code>: Magnitude (length).</li>
-      <li><code>v.normalize() &rarr; float</code>: Normalize to a unit vector.</li>
-      <li><code>v.rotate(float) &rarr; vec2</code>: Rotate counter-clockwise.</li>
-      <li><code>v1.dot(v2) &rarr; float</code>: Dot product.</li>
-      <li><code>v1.distance(v2) &rarr; float</code>: Distance between two points.</li>
-      <li><code>v1.angle(v2) &rarr; float</code>: Angle between two vectors.</li>
-    </ul>
+      <h2>Vector Math</h2>
+      <ul>
+        <li><code>vec2(x, y) &rarr; vec2</code>: Create a vector.</li>
+        <li><code>v.x, v.y &rarr; float</code>: Get a component of a vector.</li>
+        <li><code>v1 +- v2 &rarr; vec2</code>: Basic arithmetic between vectors.</li>
+        <li><code>v */ float &rarr; vec2</code>: Basic arithmetic between vectors and scalars.</li>
+        <li><code>-v &rarr; vec2</code>: Negate a vector.</li>
+        <li><code>v.magnitude() &rarr; float</code>: Magnitude (length).</li>
+        <li><code>v.normalize() &rarr; float</code>: Normalize to a unit vector.</li>
+        <li><code>v.rotate(float) &rarr; vec2</code>: Rotate counter-clockwise.</li>
+        <li><code>v1.dot(v2) &rarr; float</code>: Dot product.</li>
+        <li><code>v1.distance(v2) &rarr; float</code>: Distance between two points.</li>
+        <li><code>v1.angle(v2) &rarr; float</code>: Angle between two vectors.</li>
+      </ul>
 
-    <h2>Miscellaneous</h2>
-    <ul>
-      <li><code>print(string)</code>: Log a message to the browser console.</li>
-      <li><a href="https://rhai.rs/book/language/index.html">Rhai Language Reference</a></li>
-    </ul>
+      <h2>Miscellaneous</h2>
+      <ul>
+        <li><code>print(string)</code>: Log a message to the browser console.</li>
+        <li><a href="https://rhai.rs/book/language/index.html">Rhai Language Reference</a></li>
+      </ul>
+    </div>
   </div>
-  <div id="splash"></div>
 </body>
 </html>
