--- a/www/index.html
+++ b/www/index.html
@@ -66,7 +66,7 @@
       <h2>Miscellaneous</h2>
       <ul>
         <li><code>print(string)</code>: Log a message to the browser console.</li>
-        <li><a href="https://rhai.rs/book/language/index.html">Rhai Language Reference</a></li>
+        <li><a href="https://rhai.rs/book/language/index.html" target="_blank">Rhai Language Reference</a></li>
       </ul>
     </div>
   </div>
