--- a/www/index.html
+++ b/www/index.html
@@ -58,9 +58,9 @@
         <li><code>v.magnitude() &rarr; float</code>: Magnitude (length).</li>
         <li><code>v.normalize() &rarr; float</code>: Normalize to a unit vector.</li>
         <li><code>v.rotate(float) &rarr; vec2</code>: Rotate counter-clockwise.</li>
+        <li><code>v.angle() &rarr; float</code>: Angle of a vector.</li>
         <li><code>v1.dot(v2) &rarr; float</code>: Dot product.</li>
         <li><code>v1.distance(v2) &rarr; float</code>: Distance between two points.</li>
-        <li><code>v1.angle(v2) &rarr; float</code>: Angle between two vectors.</li>
       </ul>
 
       <h2>Miscellaneous</h2>
