www: fix doc for vec2.normalize()

--- a/www/index.html
+++ b/www/index.html
@@ -56,7 +56,7 @@
         <li><code>v */ float &rarr; vec2</code>: Basic arithmetic between vectors and scalars.</li>
         <li><code>-v &rarr; vec2</code>: Negate a vector.</li>
         <li><code>v.magnitude() &rarr; float</code>: Magnitude (length).</li>
-        <li><code>v.normalize() &rarr; float</code>: Normalize to a unit vector.</li>
+        <li><code>v.normalize() &rarr; vec2</code>: Normalize to a unit vector.</li>
         <li><code>v.rotate(float) &rarr; vec2</code>: Rotate counter-clockwise.</li>
         <li><code>v.angle() &rarr; float</code>: Angle of a vector.</li>
         <li><code>v1.dot(v2) &rarr; float</code>: Dot product.</li>
