www: add github link

--- a/www/index.html
+++ b/www/index.html
@@ -24,6 +24,7 @@
     <div class="toolbar-elem title">Oort</div>
     <div class="toolbar-elem right"><select name="scenario" id="scenario"></select></div>
     <div class="toolbar-elem right"><a id="doc_link" href="#">Documentation</a></div>
+    <div class="toolbar-elem right"><a href="http://github.com/rlane/oort3" target="_none">GitHub</a></div>
   </div>
   <div id="overlay">
     <div id="splash-overlay" class="inner-overlay"></div>
