rhai: add a random number generator

--- a/www/index.html
+++ b/www/index.html
@@ -67,6 +67,7 @@
       <h2>Miscellaneous</h2>
       <ul>
         <li><code>print(string)</code>: Log a message to the browser console.</li>
+        <li><code>rng.next(low, high) &rarr; float</code>: Get a random number.</li>
         <li><a href="https://rhai.rs/book/language/index.html" target="_blank">Rhai Language Reference</a></li>
       </ul>
     </div>
