--- a/www/index.html
+++ b/www/index.html
@@ -31,7 +31,7 @@
     <div id="splash-overlay" class="inner-overlay"></div>
     <div id="doc-overlay" class="inner-overlay">
       <h1>Quick Reference</h1>
-      Press Escape to close.<br />
+      Press Escape to close. File bugs on <a href="http://github.com/rlane/oort3/issues" target="_none">GitHub</a>.<br />
 
       <h2>Basics</h2>
       Select a scenario from the list in the top-right of the page.</br>
