ui: move mission_complete overlay to html/js

--- a/www/index.html
+++ b/www/index.html
@@ -73,6 +73,13 @@
         <li><a href="https://rhai.rs/book/language/index.html" target="_blank">Rhai Language Reference</a></li>
       </ul>
     </div>
+    <div id="mission-complete-overlay" class="inner-overlay">
+      <h1>Mission Complete</h1>
+      Time: <span id='mission-complete-time'></span><br/></br/>
+      Code size: <span id='mission-complete-code-size'></span><br/></br/>
+      <a id='mission-complete-next' href="#">Next mission</a>
+      <span id='mission-complete-no-next'>Use the scenario list in the top-right of the page to choose your next mission.</span>
+    </div>
   </div>
 </body>
 </html>
