www: show leaderboards

--- a/www/index.html
+++ b/www/index.html
@@ -79,6 +79,23 @@
       Code size: <span id='mission-complete-code-size'></span><br/></br/>
       <a id='mission-complete-next' href="#">Next mission</a>
       <span id='mission-complete-no-next'>Use the scenario list in the top-right of the page to choose your next mission.</span>
+      <br/><br/>
+      <div id='leaderboards'>
+        <div class="leaderboard" id='time-leaderboard'>
+          <table>
+            <tr><th colspan=2>Top By Time</th></tr>
+            <tr><th>User</th><th>Time</th></tr>
+            <tbody id='time-leaderboard-tbody'></tbody>
+          </table>
+        </div>
+        <div class="leaderboard" id='code-size-leaderboard'>
+          <table>
+            <tr><th colspan=2>Top By Size</th></tr>
+            <tr><th>User</th><th>Size</th></tr>
+            <tbody id='code-size-leaderboard-tbody'></tbody>
+          </table>
+        </div>
+      </div>
     </div>
   </div>
 </body>
