www: use a permanent discord link

--- a/www/index.html
+++ b/www/index.html
@@ -25,7 +25,7 @@
     <div class="toolbar-elem right"><select name="scenario" id="scenario"></select></div>
     <div class="toolbar-elem right"><a id="doc_link" href="#">Documentation</a></div>
     <div class="toolbar-elem right"><a href="http://github.com/rlane/oort3" target="_none">GitHub</a></div>
-    <div class="toolbar-elem right"><a href="https://discord.gg/X4F9TqTWeb" target="_none">Discord</a></div>
+    <div class="toolbar-elem right"><a href="https://discord.gg/vYyu9EhkKH" target="_none">Discord</a></div>
     <div id="username" class="toolbar-elem right" title="Your username"></div>
   </div>
   <div id="overlay">
