Add open source attribution document.

--- a/www/index.html
+++ b/www/index.html
@@ -72,6 +72,10 @@
         <li><code>rng.next(low, high) &rarr; float</code>: Get a random number.</li>
         <li><a href="https://rhai.rs/book/language/index.html" target="_blank">Rhai Language Reference</a></li>
       </ul>
+      <h2>Credits</h1>
+      Rich Lane<br/>
+      <br/>
+      <a href='attribution.txt' target='_none'>Open source attribution</a>
     </div>
     <div id="mission-complete-overlay" class="inner-overlay">
       <h1>Mission Complete</h1>
