rhai: add an angle_diff utility function

--- a/www/index.html
+++ b/www/index.html
@@ -70,6 +70,7 @@
       <ul>
         <li><code>print(string)</code>: Log a message to the browser console.</li>
         <li><code>rng.next(low, high) &rarr; float</code>: Get a random number.</li>
+        <li><code>angle_diff(a, b) &rarr; float</code>: Returns the shortest (possibly negative) distance between two angles.</li>
         <li><a href="https://rhai.rs/book/language/index.html" target="_blank">Rhai Language Reference</a></li>
       </ul>
       <h2>Credits</h1>
