--- a/www/index.html
+++ b/www/index.html
@@ -45,10 +45,24 @@
         <li><code>api.velocity() &rarr; vec2</code>: Get the current velocity in m/s.</li>
         <li><code>api.heading() &rarr; float</code>: Get the current heading in radians.</li>
         <li><code>api.angular_velocity() &rarr; float</code>: Get the current angular velocity in radians/s.</li>
-        <li><code>api.accelerate(acceleration: vec2)</code>: Linear acceleration. X axis is forward/back, Y axis is left/right.</li>
+        <li><code>api.accelerate(acceleration: vec2)</code>: Linear acceleration. X axis is forward/back, Y axis is left/right. Units are m/s<sup>2</sup></li>
         <li><code>api.torque(acceleration: float)</code>: Angular acceleration. Unit is radians/s<sup>2</sup>.</li>
         <li><code>api.fire_weapon()</code>: Fire the ship's main weapon.</li>
         <li><code>api.explode()</code>: Self-destruct.</li>
+        <li><code>api.scan() &rarr; ScanResult</code>: Find the closest enemy ship</li>
+        <li><code>ScanResult { position: vec2, velocity: vec2, found: bool }</code></li>
+      </ul>
+
+      <h2>Scalar Math</h2>
+      <ul>
+        <li><code>x +-*/% y &rarr; float</code>: Basic arithmetic.</li>
+        <li><code>-x &rarr; float</code>: Negation.</li>
+        <li><code>x ** y &rarr; float</code>: Exponentiation.</li>
+        <li><code>abs(x) &rarr; float</code>: Absolute value.</li>
+        <li><code>sin(x), cos(x), tan(x) &rarr; float</code>: Trignometry.</li>
+        <li><code>sqrt(x) &rarr; float</code>: Square root.</li>
+        <li><code>log(x, base) &rarr; float</code>: Logarithm.</li>
+        <li><code>PI(), E()</code>: Constants.</li>
       </ul>
 
       <h2>Vector Math</h2>
