rhai: split radar into its own object

--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,11 @@
         <li><code>ship.torque(acceleration: float)</code>: Angular acceleration. Unit is radians/s<sup>2</sup>.</li>
         <li><code>ship.fire_weapon()</code>: Fire the ship's main weapon.</li>
         <li><code>ship.explode()</code>: Self-destruct.</li>
-        <li><code>ship.scan() &rarr; ScanResult</code>: Find the closest enemy ship</li>
+      </ul>
+
+      <h2>Radar</h2>
+      <ul>
+        <li><code>radar.scan() &rarr; ScanResult</code>: Find the closest enemy ship</li>
         <li><code>ScanResult { position: vec2, velocity: vec2, found: bool }</code></li>
       </ul>
 
