rhai: add min/max

--- a/www/index.html
+++ b/www/index.html
@@ -67,6 +67,7 @@
         <li><code>sin(x), cos(x), tan(x) &rarr; float</code>: Trignometry.</li>
         <li><code>sqrt(x) &rarr; float</code>: Square root.</li>
         <li><code>log(x, base) &rarr; float</code>: Logarithm.</li>
+        <li><code>min(a, b), max(a, b) &rarr; float</code>: Minimum and maximum.</li>
         <li><code>PI(), E()</code>: Constants.</li>
       </ul>
 
