--- a/www/index.html
+++ b/www/index.html
@@ -49,6 +49,8 @@
         <li><code>ship.accelerate(acceleration: vec2)</code>: Linear acceleration. X axis is forward/back, Y axis is left/right. Units are m/s<sup>2</sup></li>
         <li><code>ship.torque(acceleration: float)</code>: Angular acceleration. Unit is radians/s<sup>2</sup>.</li>
         <li><code>ship.fire_weapon()</code>: Fire the ship's main weapon.</li>
+        <li><code>ship.launch_missile()</code>: Launch a missile.</li>
+        <li><code>ship.class() &rarr; string</code>: Returns the ship class as a string.</li>
         <li><code>ship.explode()</code>: Self-destruct.</li>
       </ul>
 
