rhai: add an API to draw debug lines

--- a/www/index.html
+++ b/www/index.html
@@ -93,6 +93,7 @@
         <li><code>print(string)</code>: Log a message to the browser console.</li>
         <li><code>rng.next(low, high) &rarr; float</code>: Get a random number.</li>
         <li><code>angle_diff(a, b) &rarr; float</code>: Returns the shortest (possibly negative) distance between two angles.</li>
+        <li><code>dbg.line(v0, v1, color: int)</code>: Draw a line. Color is 24-bit RGB.</li>
         <li><a href="https://rhai.rs/book/language/index.html" target="_blank">Rhai Language Reference</a></li>
       </ul>
       <h2>Credits</h1>
