ui: display results of background simulations

--- a/www/index.html
+++ b/www/index.html
@@ -107,6 +107,7 @@
       <h1>Mission Complete</h1>
       Time: <span id='mission-complete-time'></span> seconds<br/></br/>
       Code size: <span id='mission-complete-code-size'></span> bytes<br/></br/>
+      <span id='mission-complete-win-ratio'></span><br/><br/>
       <a id='mission-complete-next' href="#">Next mission</a>
       <span id='mission-complete-no-next'>Use the scenario list in the top-right of the page to choose your next mission.</span>
       <br/><br/>
