yew: factor out app binary

--- a/yew/index.html
+++ b/yew/index.html
@@ -16,6 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link data-trunk href="style.css" rel="css"/>
+  <link data-trunk rel="rust" data-bin="app" />
 </head>
 <body>
 </body>
