migrate to yew 0.19, rust-monaco, and trunk

--- a/yew/index.html
+++ b/yew/index.html
@@ -15,6 +15,9 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="app" data-type="main" />
+  <link data-trunk rel="rust" href="../sim_agent/Cargo.toml" data-wasm-opt="z" data-bin="worker" data-type="worker" />
+  <link data-trunk rel="css" href="style.css" />
 </head>
 <body>
 </body>
