--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="app" data-type="main" />
-  <link data-trunk rel="rust" href="../sim_agent/Cargo.toml" data-wasm-opt="z" data-bin="worker" data-type="worker" />
+  <link data-trunk rel="rust" href="../worker/Cargo.toml" data-wasm-opt="z" data-bin="worker" data-type="worker" />
   <link data-trunk rel="css" href="style.css" />
 </head>
 <body>
