--- a/app/index.html
+++ b/app/index.html
@@ -17,6 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="app" data-type="main" />
   <link data-trunk rel="rust" href="../worker/Cargo.toml" data-wasm-opt="z" data-bin="oort_worker" data-type="worker" />
+  <link data-trunk rel="rust" href="../analyzer/Cargo.toml" data-wasm-opt="z" data-bin="oort_analyzer" data-type="worker" />
   <link data-trunk rel="css" href="style.css" />
 </head>
 <body>
