--- a/app/index.html
+++ b/app/index.html
@@ -15,16 +15,11 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Share+Tech+Mono&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-  <link data-trunk rel="css" href="style.css" />
-  <script type="text/javascript">
-    window.set_username = function (username) {
-      localStorage.setItem("/user/name", username);
-    };
-  </script>
   <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
   <script type="text/javascript" src="https://golden-layout.com/files/latest/js/goldenlayout.min.js"></script>
   <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-base.css" />
   <link type="text/css" rel="stylesheet" href="https://golden-layout.com/files/latest/css/goldenlayout-dark-theme.css" />
+  <link data-trunk rel="css" href="style.css" />
   <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="app" data-type="main" />
   <link data-trunk rel="rust" href="../worker/Cargo.toml" data-wasm-opt="z" data-bin="oort_worker" data-type="worker" />
   <link data-trunk rel="rust" href="../analyzer/Cargo.toml" data-wasm-opt="z" data-bin="oort_analyzer" data-type="worker" />
@@ -35,16 +30,22 @@
   <div id="goldenlayout"></div>
   <script>
     var config = {
+      settings: {
+        showPopoutIcon: false,
+        showCloseIcon: false
+      },
       content: [{
         type: 'row',
         content:[{
           type: 'component',
           componentName: 'Editor',
-          componentState: {}
+          componentState: {},
+          isClosable: false
         }, {
           type: 'component',
           componentName: 'Simulation',
-          componentState: {}
+          componentState: {},
+          isClosable: false
         }]
       }]
     };
@@ -57,6 +58,11 @@
       container.getElement()[0].id = 'simulation-window';
     });
     myLayout.init();
+  </script>
+  <script type="text/javascript">
+    window.set_username = function (username) {
+      localStorage.setItem("/user/name", username);
+    };
   </script>
 </body>
 </html>
