move frontend crates to a new directory

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -21,8 +21,8 @@
   <link rel="stylesheet" href="https://unpkg.com/golden-layout@1.5.9/src/css/goldenlayout-dark-theme.css" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <link data-trunk rel="css" href="style.css" />
   <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="app" data-type="main" />
-  <link data-trunk rel="rust" href="../worker/Cargo.toml" data-wasm-opt="z" data-bin="oort_worker" data-type="worker" />
-  <link data-trunk rel="rust" href="../analyzer/Cargo.toml" data-wasm-opt="z" data-bin="oort_analyzer" data-type="worker" />
+  <link data-trunk rel="rust" href="../simulation_worker/Cargo.toml" data-wasm-opt="z" data-bin="oort_simulation_worker" data-type="worker" />
+  <link data-trunk rel="rust" href="../analyzer_worker/Cargo.toml" data-wasm-opt="z" data-bin="oort_analyzer_worker" data-type="worker" />
 </head>
 <body>
   <div id="toolbar"></div>
