--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -28,5 +28,6 @@
   <div id="toolbar"></div>
   <div id="yew"></div>
   <div id="goldenlayout"></div>
+  <div id="welcome-hidden" hidden=true><div id="welcome-window"></div></div>
 </body>
 </html>
