app: increase editor size in small windows

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -30,5 +30,6 @@
   <div id="yew"></div>
   <div id="goldenlayout"></div>
   <div id="welcome-hidden" hidden=true><div id="welcome-window"></div></div>
+  <div id="text-size">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</div>
 </body>
 </html>
