analyzer: move bin to worker crate

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -23,7 +23,7 @@
   <link data-trunk rel="css" href="style.css" />
   <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="app" data-type="main" />
   <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="oort_simulation_worker" data-type="worker" />
-  <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="oort_analyzer_worker" data-type="worker" />
+  <link data-trunk rel="rust" href="../analyzer_worker/Cargo.toml" data-wasm-opt="z" data-bin="oort_analyzer_worker" data-type="worker" />
 </head>
 <body>
   <div id="toolbar"></div>
