--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Oort</title>
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-30337026-1"></script>
   <script>
