--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -28,7 +28,9 @@
 </head>
 <body>
   <div id="toolbar"></div>
-  <div id="yew"></div>
+  <div id="yew">
+    <div id="loading-outer"><div id="loading-inner"><h1>Loading...</h1></div></div>
+  </div>
   <div id="goldenlayout"></div>
   <div id="welcome-hidden" hidden=true><div id="welcome-window"></div></div>
   <div id="text-size">xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</div>
