app: update tags

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -11,6 +11,7 @@
     gtag('js', new Date());
 
     gtag('config', 'UA-30337026-1');
+    gtag('config', 'AW-11330140454');
   </script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
