added favicon to website

--- a/frontend/app/index.html
+++ b/frontend/app/index.html
@@ -26,6 +26,25 @@
   <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="app" data-type="main" />
   <link data-trunk rel="rust" href="Cargo.toml" data-wasm-opt="z" data-bin="oort_simulation_worker" data-type="worker" />
   <link data-trunk rel="rust" href="../analyzer_worker/Cargo.toml" data-wasm-opt="z" data-bin="oort_analyzer_worker" data-type="worker" />
+  
+  <link data-trunk rel="copy-file" href="./icons/android-chrome-192x192.png">
+  <link data-trunk rel="copy-file" href="./icons/android-chrome-512x512.png">
+  <link data-trunk rel="copy-file" href="./icons/apple-touch-icon.png">
+  <link data-trunk rel="copy-file" href="./icons/browserconfig.xml">
+  <link data-trunk rel="copy-file" href="./icons/favicon-16x16.png">
+  <link data-trunk rel="copy-file" href="./icons/favicon-32x32.png">
+  <link data-trunk rel="copy-file" href="./icons/favicon.ico">
+  <link data-trunk rel="copy-file" href="./icons/mstile-150x150.png">
+  <link data-trunk rel="copy-file" href="./icons/safari-pinned-tab.svg">
+  <link data-trunk rel="copy-file" href="./icons/site.webmanifest">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+  <meta name="msapplication-TileColor" content="#da532c">
+  <meta name="theme-color" content="#ffffff">
 </head>
 <body>
   <div id="toolbar"></div>
